fix: case content alignment

--- a/src/sections/case-content/styles.module.scss
+++ b/src/sections/case-content/styles.module.scss
@@ -18,7 +18,7 @@
   margin-bottom: 32px;
 
   @include mq("desktop") {
-    grid-column: 1/5;
+    grid-column: span 4;
     margin-right: 40px;
     margin-bottom: 0;
   }
@@ -53,6 +53,6 @@
   grid-column: 1/-1;
 
   @include mq("desktop") {
-    grid-column: 6/13;
+    grid-column: 5/13;
   }
 }
